--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: 48344951
+      MYSQL_ROOT_PASSWORD: trianggautama08
       MYSQL_DATABASE: balitra
 
   cache:
